Update 05. 의존관계 자동주입.md

--- a/spring/05. 의존관계 자동주입.md
+++ b/spring/05. 의존관계 자동주입.md
@@ -1,6 +1,180 @@
 # 의존관계 자동주입
 ### 자동주입 방법
 - 생성자 주입 : 생성자 호출시점에 1번만 호출, 불변 필수 의존관계에 사용
+  - @Component로 지정된 클래스의 생성자가 하나일 때는 @Autowired를 생략해도 빈이 자동 주입됨
+  - 필드에 final로 작성 시 생성자의 누락된 값을 컴파일에러로 알려줌
+  
+  ``` java
+  @Component
+  public class OrderServiceImpl implements OrderService {
+    private final MemberRepository memberRepository;
+    private final DiscountPolicy discountPolicy;
+    @Autowired  // 생성자 하나일땐 생략가능
+    public void init(MemberRepository memberRepository, DiscountPolicy discountPolicy) {
+      this.memberRepository = memberRepository;
+      this.discountPolicy = discountPolicy;
+    }
+  }
+  ```
 - setter 주입 : setter메서드 방식, 선택 변경 가능성 있는 의존관계에 사용
-- 필드 주입 : 코드간결하나 외부에서 변경 불가능, 사용권장하지 않음
+- 필드 주입 : 코드간결하나 외부에서 변경 불가능(변경하려면 어차피 setter생성 필요), 테스트 코드 내에서만 사용시 사용가능
+
+  ``` java
+  @Component
+  public class OrderServiceImpl implements OrderService {
+    @Autowired private MemberRepository memberRepository;
+    @Autowired private DiscountPolicy discountPolicy;
+  }
+  ```
 - 일반 메서드 주입 : 한번에 여러 필드 주입받을수 있으나 잘 사용하지 않음
+<br/>
+
+### 옵션처리
+- 주입할 대상이 없어도 동작확인을 하고 싶을 때 처리하는 방법
+- @Autowired(required=false) : 자동 주입할 대상이 없으면 수정자 메서드 자체가 호출 안됨
+- org.springframework.lang.@Nullable : 자동 주입할 대상이 없으면 null이 입력됨
+- Optional<> : 자동 주입할 대상이 없으면 Optional.empty 가 입력됨
+  ``` java
+  @Autowired(required = false)
+  public void setNoBean1(Member member) {
+    System.out.println("setNoBean1 = " + member);
+  }
+  //null 호출
+  @Autowired
+  public void setNoBean2(@Nullable Member member) {
+    System.out.println("setNoBean2 = " + member);
+  }
+  //Optional.empty 호출
+  @Autowired(required = false)
+  public void setNoBean3(Optional<Member> member) {
+   System.out.println("setNoBean3 = " + member);
+  }
+  ```
+  <br/>
+  
+### 롬복
+- 생성자, getter, setter등을 자동생성 해주는 라이브러리
+  - Lombok 설정
+    - build.gradle에 Lombok라이버르러 추가
+    - Preferences > plugin lombok 검색 설치 실행 (재시작)
+    - Preferences > Annotation Processors 검색 Enable annotation processing 체크 (재시작)
+      ``` 
+      //build.gradle
+      configurations {
+        compileOnly {
+          extendsFrom annotationProcessor
+        }
+      }
+
+      compileOnly 'org.projectlombok:lombok'
+      annotationProcessor 'org.projectlombok:lombok'
+      testCompileOnly 'org.projectlombok:lombok'
+      testAnnotationProcessor 'org.projectlombok:lombok'
+      ```
+      
+  - Lombok 사용
+    ``` java
+    @Component
+    @Getter // Getter 자동생성
+    @Setter // Setter 자동생성
+    @ToString // ToString 자동생성
+    @RequiredArgsConstructor  // final붙은 필드를 이용한 생성자 자동생성
+    public class OrderServiceImpl implements OrderService {
+      private final MemberRepository memberRepository;
+      private final DiscountPolicy discountPolicy;
+    }
+    ```
+    <br/>
+    
+### 조회 대상 빈이 2개이상 일 때 해결방법
+- @Autowired 필드명 매칭 : 동일한 타입의 객체중 원하는 객체를 명시
+  ``` java
+  @Autowired
+  //private DiscountPolicy discountPolicy
+  private DiscountPolicy rateDiscountPolicy
+  ```
+- @Qualifier : 동일한 타입의 객체들의 구별자를 명시
+  ``` java
+  @Component
+  @Qualifier("mainDiscountPolicy")
+  public class RateDiscountPolicy implements DiscountPolicy {}
+  
+  @Component
+  @Qualifier("fixDiscountPolicy")
+  public class FixDiscountPolicy implements DiscountPolicy {}
+  
+  @Autowired
+  public DiscountPolicy setDiscountPolicy(@Qualifier("mainDiscountPolicy")  DiscountPolicy discountPolicy) {
+    this.discountPolicy = discountPolicy;
+  }
+  ```
+- @Primary : main으로서 사용되는 객체에 명시
+  ``` java
+  @Component
+  @Primary
+  public class RateDiscountPolicy implements DiscountPolicy {}
+  
+  @Component
+  public class FixDiscountPolicy implements DiscountPolicy {}
+  ```
+- @Qualifier는 추가적인 코드작성이 필요하기 때문에 사용이 간단한 @Primary로 더 많이 사용
+- @Qualifier가 더 명시적이기 때문에 @Primary보다 우선권을 가진다(수동설정이 자동설정보다 우선적용)
+<br/>
+
+### 어노테이션 직접 생성
+- @Qualifier("mainDiscountPolicy") 이렇게 문자를 적으면 컴파일시 에러로 확인 불가능
+- 해당 어노테이션을 포함하는 어노테이션 클래스를 만들어 사용하면 에러 확인 가능
+  ``` java
+  @Target({ElementType.FIELD, ElementType.METHOD, ElementType.PARAMETER,
+  ElementType.TYPE, ElementType.ANNOTATION_TYPE})
+  @Retention(RetentionPolicy.RUNTIME)
+  @Documented
+  @Qualifier("mainDiscountPolicy")
+  public @interface MainDiscountPolicy {
+  }
+  ```
+  ``` java
+  @Component
+  @MainDiscountPolicy
+  public class RateDiscountPolicy implements DiscountPolicy {}
+  
+  @Autowired
+  public OrderServiceImpl(MemberRepository memberRepository, @MainDiscountPolicy DiscountPolicy discountPolicy) {
+    this.memberRepository = memberRepository;
+    this.discountPolicy = discountPolicy;
+  }
+  ```
+  <br/>
+  
+### 조회빈 모두 사용하는 방법
+- 해당타입의 빈이 다 필요한 경우 List, Map을 이용해 사용가능
+  ``` java
+  public class AllBeanTest {
+    @Test
+    void findAllBean() {
+      ApplicationContext ac = new AnnotationConfigApplicationContext(AutoAppConfig.class, DiscountService.class);
+      DiscountService discountService = ac.getBean(DiscountService.class);
+      Member member = new Member(1L, "userA", Grade.VIP);
+      int discountPrice = discountService.discount(member, 10000, "fixDiscountPolicy");
+      assertThat(discountService).isInstanceOf(DiscountService.class);
+      assertThat(discountPrice).isEqualTo(1000);
+    }
+    static class DiscountService {
+      private final Map<String, DiscountPolicy> policyMap;
+      private final List<DiscountPolicy> policies;
+      public DiscountService(Map<String, DiscountPolicy> policyMap, List<DiscountPolicy> policies) {
+        this.policyMap = policyMap;
+        this.policies = policies;
+        System.out.println("policyMap = " + policyMap);
+        System.out.println("policies = " + policies);
+      }
+      public int discount(Member member, int price, String discountCode) {
+        DiscountPolicy discountPolicy = policyMap.get(discountCode);
+        System.out.println("discountCode = " + discountCode);
+        System.out.println("discountPolicy = " + discountPolicy);
+        return discountPolicy.discount(member, price);
+      }
+    }
+  }
+  ```
+    
